# dev_laudo_sinfweb

./: .gitignore  Pipfile  README.md  README_tmp.html  config.py  custom_types.py  fastdoc.bat  fastdoc_update.bat  helpers.py  main.py  manage.py  mypy.ini  pyf.bat  pyproject.toml  render.py  requirements.txt  test  teste.docx
alembic/: env.py
alembic/versions/: 102c38f51647_teste.py  a09c37f3795b_teste.py
database/: __init__.py  models.py  repo.py
dist_start/: fastdoc.bat
doc/: deploy.md  index.html  index.md  page2.html  widgets.md
doc/assets/: fluxogramas.odg
doc_source/: index.md  page2.md
docs/: deploy.md
fastdoc/: config.py  current_release.json  custom_types.py  helpers.py  preferences.py
fastdoc/app_flask/: ajax_helpers.py  app.py  form_base.py  form_serializers.py  helpers.py
fastdoc/app_flask/form_fields/: __init__.py  helpers.py  scase_pics.py  sdate_field.py  sdate_time_field.py  sfile_size_field.py  sfloat.py  sinteger.py  sstring.py  sstring_list.py
fastdoc/app_flask/gui_server/: __init__.py  gui_server.py  gui_server_thread.py  gui_server_ui.py  webview_window.py
fastdoc/app_flask/qt/: __init__.py
fastdoc/app_flask/static/: code.js  style.css
fastdoc/app_flask/templates/: base.html  doc_form.html  macros.html  test.html
fastdoc/app_flask/widgets/: widget_protocol.py
fastdoc/custom_types/: __init__.py  objects_type.py
fastdoc/data_extractors/: odin_pdf_parser.py
fastdoc/data_extractors/odin_parser/: odin_pdf_parser.py
fastdoc/data_extractors/sinfweb_bridge/: __init__.py  config.py  requester.py  sinfweb_bridge.py
fastdoc/doc/: index.html  index.md
fastdoc/gui_app/: __init__.py  helpers.py
fastdoc/gui_app/about_dialog/: __init__.py  about_dialog.ui  about_dialog_ui.py
fastdoc/gui_app/form/: __init__.py  form.ui  form_ui.py
fastdoc/gui_app/main_window/: __init__.py  (+3 more)
fastdoc/helpers/: __init__.py  external.py  models_manager.py  update.py  zip.py
fastdoc/models_example/: __init__.py
fastdoc/updater/: fastdoc.bat  fastdoc.go  fastdoc_gui.go  fastdoc_update.bat  go.mod  helpers.go  main.go  pack_dist.py  updater.py
gui_app/: helpers.py  main.py
gui_app/form/: __init__.py  form.ui  form_ui.py
gui_app/main_window/: __init__.py  main_window.py  main_window.ui  main_window_ui.py
gui_app/test_widget/: __init__.py  test_widget.ui  test_widget_ui.py
gui_app/widgets/: __init__.py  helpers.py  label_error.py  sbase.py  scheck_box.py  scombo_box.py  sdate.py  sfolder_pics.py  sspin_box.py  stext.py  swidget.py
libs/report_writer/: .gitignore  README.md  mypy.ini  pyproject.toml  setup.py
libs/report_writer/report_writer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
libs/report_writer/report_writer/doc_handler/: docx_handler.py
libs/report_writer/tests/: test_render.py
manage/: __main__.py  actions.py  config.py  helpers.py
models_example/: __init__.py
models_example/example/: __init__.py  meta.json  pre.html  test_data.py
models_example/laudo_exemplo/: __init__.py  form.py  pre.py  test_data.py
models_example/laudo_exemplo2/: test_data.py
report_writer/: __init__.py
report_writer/doc_handler/: docx_handler.py  filters.py
report_writer/form_helpers/: form_fields.py
rlibs/report_writer/: types.py
widgets/edit/: __init__.py
(+97 files in other folders)
