[tool.poetry]
name = "fastdoc"
version = "0.1.0"
description = "A fast document writer"
authors = ["Renato Martins"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
docxtpl = "*"
jinxed = "*"
pyqt5 = "*"
install = "*"
stringcase = "*"
beautifulsoup4 = "*"
inquirerpy = "*"
unidecode = "*"
Flask = "^2.1.1"
Bootstrap-Flask = "^2.0.2"
Flask-WTF = "^1.0.1"
PyQtWebEngine = "^5.15.5"
humanfriendly = "^10.0"
# report-writer = {git = "https://github.com/renatormc/report_writer", branch= "master"}
report-writer = {path = "./libs/report_writer", develop = true}
SQLAlchemy = "^1.4.35"

[tool.poetry.dev-dependencies]
pyqt5-stubs = "*"
mypy = "*"
types-humanfriendly = "^9.2.6"
sqlalchemy-stubs = "^0.4"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
