[tool.poetry]
name = "fastdoc"
version = "0.1.0"
description = "A fast document writer"
authors = ["Renato Martins"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
docxtpl = "*"
jinxed = "*"
pyqt5 = "*"
install = "*"
stringcase = "*"
beautifulsoup4 = "*"
inquirerpy = "*"
unidecode = "*"
Flask = "^2.1.1"
Bootstrap-Flask = "^2.0.2"
Flask-WTF = "^1.0.1"
PyQtWebEngine = "^5.15.5"
humanfriendly = "^10.0"
SQLAlchemy = "^1.4.35"
Pillow = "^9.1.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pyqt5-stubs = "*"
mypy = "*"
types-humanfriendly = "^9.2.6"
sqlalchemy-stubs = "^0.4"
autopep8 = "^1.6.0"
types-requests = "^2.27.16"
types-Pillow = "^9.0.11"
types-beautifulsoup4 = "^4.10.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
